Tatt ut test som feiler